<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.game.TryBrailleActivity">

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/header_game"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_bottom_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pembiasaan_btn"
        android:textColor="?attr/colorOnPrimary"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn1"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_all_rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn4"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_all_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:text="@string/btn2"
        android:background="@drawable/bg_all_rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:textColor="@android:color/white"
        android:text="@string/btn5"
        android:background="@drawable/bg_all_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:text="@string/btn3"
        android:background="@drawable/bg_all_rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:textColor="@android:color/white"
        android:text="@string/btn6"
        android:background="@drawable/bg_all_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_all_rounded_corner"
        android:text="@string/back"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>