<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.game.CongratulateFragment">

    <FrameLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:background="@drawable/bg_colored_bottom_rounded_corner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_game"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/header_game"
            android:background="@drawable/bg_bottom_rounded_corner" />

        <ImageView
            android:id="@+id/iv_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/trophy_for_answering"
            android:src="@drawable/img_trophy" />

        <TextView
            android:id="@+id/tv_congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="320dp"
            android:text="@string/congrats"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"
            android:textColor="@color/white"
            android:text="@string/answer_default"
            android:textSize="16sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:text="@string/default_score"
        android:textSize="96sp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <TextView
        android:id="@+id/tv_caption_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:text="@string/default_congratulate"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_score" />

    <Button
        android:id="@+id/btn_back_to_games"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/bg_colored_all_rounded_corner"
        android:text="@string/back_to_home_games"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caption_score" />


</androidx.constraintlayout.widget.ConstraintLayout>