<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.brailleapp.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan">
    </fragment>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.brailleapp.ui.list.ListBrailleFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list_braille" />

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.example.brailleapp.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.brailleapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_try_braille"
        android:name="com.example.brailleapp.ui.game.TryBrailleFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_try_braille" />

    <fragment
        android:id="@+id/navigation_questions"
        android:name="com.example.brailleapp.ui.game.QuestionsFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_questions" >
    </fragment>

    <fragment
        android:id="@+id/navigation_congratulate"
        android:name="com.example.brailleapp.ui.game.CongratulateFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_congratulate"/>

</navigation>