<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.game.GameFragment">

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/header_game"
        android:textColor="@color/white"
        android:background="@drawable/bg_bottom_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/game_icon"
        android:src="@drawable/ic_game_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_readyScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ready_game"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera" />

    <Button
        android:id="@+id/btYes"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_all_rounded_corner"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_readyScan" />

    <Button
        android:id="@+id/btNo"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_all_rounded_corner"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btYes"
        app:layout_constraintTop_toBottomOf="@+id/tv_readyScan" />

</androidx.constraintlayout.widget.ConstraintLayout>