<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dark_blue"
    tools:context=".ui.profile.EditProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        android:background="?attr/colorPrimaryVariant"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/lavender_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/bold"
                android:textColor="@color/dark_blue"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!--  Label Name -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/regular" />

                <!--  Name -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ted_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.example.brailleapp.ui.customview.CustomTextInput
                        android:id="@+id/editName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:ems="10"
                        android:inputType="text"
                        android:hint="@string/enter_new_name_here"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--  Label Username -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/regular" />

                <!--  Username -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ted_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.example.brailleapp.ui.customview.CustomTextInput
                        android:id="@+id/editUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:fontFamily="@font/regular"
                        android:hint="@string/enter_new_username_here"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--  Label Password -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/regular" />

                <!--  Password -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ted_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="1"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.example.brailleapp.ui.customview.CustomTextInput
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        app:passwordToggleEnabled="true"
                        android:fontFamily="@font/regular"
                        android:hint="@string/enter_new_password_here"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.example.brailleapp.ui.customview.CustomButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save"
                android:id="@+id/saveButton"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/dark_blue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
